GNOME Bugzilla – Bug 693213
class-gen: Fixes for the class-gen plugin
Last modified: 2013-02-06 21:12:23 UTC
See the attached patches.
Created attachment 235231 [details] [review] class-gen: fix compile warnings
Created attachment 235232 [details] [review] project-wizard: move license templates to data/ since the class-gen plugin also uses them it makes sense to have them outside the project-wizard plugin
Created attachment 235233 [details] [review] class-gen: generate license the same way as project-wizard this fixes a problem where the prefix character was missing for the first line in the generated header
Created attachment 235234 [details] [review] class-gen: output filename instead of project name before copyright
Created attachment 235235 [details] [review] class-gen: Always generate GObject private structure Having a private structure generated is often what you want even though you haven't defined any private members in the dialog. Also don't generate the _GET_PRIVATE() macro anymore but instead just initialize the ->priv pointer in instance init. Also remove unused parent_class variable in the generated class_init function.
Thanks, I have committed all this patches with any changes, except whitespaces.