class-gen: fix compile warnings

https://bugzilla.gnome.org/show_bug.cgi?id=693213